--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<form method="POST" action="/use?code=%s">
+<form method="POST" action="/use?code=%s2">
     <input type="text" name="email" placeholder="email">
-    <input type="submit" value="Use">
+    <input type="submit" value="Sign in">
 </form>
